--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.11",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
