--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.11",
     "font-awesome": "^4.7.0",
+    "joi-browser": "^13.4.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.3",
     "react-tsparticles": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
